# TRPO

lab2(cblaslevel3)/: CMakeLists.txt  readme.md
lab2(cblaslevel3)/include/: blas_types.h  syrk.h  test_macros.h  test_utils.h
lab2(cblaslevel3)/lib/: mock_openblas.c
lab2(cblaslevel3)/scripts/: build.bat  run_tests.bat
lab2(cblaslevel3)/src/: benchmark_syrk.c  main.c  syrk.c  test_gemm.c  test_symm_hemm.c  test_syr2k_her2k.c  test_syrk.c  test_syrk_herk.c  test_trmm_trsm.c
